# slack-kibela-app

./: LICENSE  README.md  pyproject.toml
bolt-app/: pyproject.toml
bolt-app/app/: app.py  requirements.txt
cdk/: app.py  pyproject.toml  setup.py
cdk/cdk/: cdk_stack.py
wordcloud-app/: Dockerfile  pyproject.toml  requirements.txt
wordcloud-app/app/: app.py
