[tool.poetry]
name = "slack-kibela-app"
version = "0.1.0"
description = ""
authors = ["KOUNOIKE Yuusuke <kounoike.yuusuke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
slack-bolt = "^1.1.1"
boto3 = "^1.16.30"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
"aws-cdk.core" = "^1.76.0"
"aws-cdk.aws-lambda" = "^1.76.0"
"aws-cdk.aws-lambda-python" = "^1.76.0"
"aws-cdk.aws-logs" = "^1.76.0"
"aws-cdk.aws-apigateway" = "^1.76.0"
"aws-cdk.aws-secretsmanager" = "^1.76.0"
"aws-cdk.aws-iam" = "^1.76.0"
"aws-cdk.aws-ssm" = "^1.76.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
