[tool.poetry]
name = "bolt-app"
version = "0.1.0"
description = ""
authors = ["KOUNOIKE Yuusuke <kounoike.yuusuke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.16.30"
slack-bolt = "^1.1.1"
aws-lambda-wsgi = "^0.0.6"
bottle = "^0.12.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
