[tool.poetry]
name = "slack-kibela-app-wordcloud-app"
version = "0.1.0"
description = ""
authors = ["KOUNOIKE Yuusuke <kounoike.yuusuke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gql = {extras = ["requests"], version = "^2.0.0"}
boto3 = "^1.16.30"
html-text = "^0.5.2"
wordcloud = "^1.8.1"
sudachipy = { git = "https://github.com/WorksApplications/SudachiPy.git", rev = "620baaa133b85ac4a3fa547a77a31b0eb18484eb"}
konoha = "^4.6.2"
SudachiDict-core = "^20200722"
SudachiDict-full = "^20200722"
joblib = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
